--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@google/generative-ai": "^0.21.0",
     "@tailwindcss/vite": "^4.0.0",
     "dotenv": "^16.4.7",
+    "mammoth": "^1.9.0",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^3.5.141",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
